# BoilerHawk

./: .gitignore  DRONE_SIMULATION_GUIDE.md  README.md  TESTING.md  fly.sh  fly_autonomous.sh  launch_ardupilot.sh  launch_depth_cam.sh  launch_iris.sh  launch_sim.sh  log_sitl_test.sh  mav.parm  mav.tlog  mav.tlog.raw  mav_0_1.parm  migration_plan.md  plan.md  requirements.txt  run_full_sitl.sh  run_gazebo_sitl.sh  setup_ardupilot.sh  test_control.sh  test_strategies.py
src/control/: QUICKSTART.md  README.md  SITL_TEST_GUIDE.md  build.sh  package.xml  setup.py
src/control/config/: control_params.yaml  control_viz.rviz
src/control/control/: control_node.py  flight_state.py  mock_planning_node.py
src/control/launch/: control.launch.py  full_autonomous.launch.py  full_system.launch.py  sitl_control_test.launch.py
src/control/scripts/: run_sitl.py
src/control/test/: mock_mavlink.py  test_control.py  test_integration.py  test_state_machine.py  test_waypoint_following.py
src/mission_manager/: MISSION_MANAGER_REPORT.md  package.xml  setup.py
src/mission_manager/config/: mission_params.yaml
src/mission_manager/launch/: mission.launch.py
src/mission_manager/mission_manager/: __init__.py  delivery_manager_node.py  mission_manager_node.py  mission_state.py
src/mission_manager/mission_manager/strategies/: base_strategy.py  maze_navigation.py  package_delivery.py  perimeter_patrol.py  search_and_rescue.py  waypoint_survey.py
src/mission_manager/mission_manager/utils/: geo_utils.py
src/sim_models/: CMakeLists.txt  package.xml
src/sim_models/config/: mavros_apm_pluginlists.yaml  sitl_extra.parm
src/sim_models/launch/: ardupilot_full_system.launch.py  delivery_sim.launch.py  depth_camera_sim.launch.py  drone_outdoor_sim.launch.py  full_gazebo_sitl.launch.py  integrated_system.launch.py  rescue_sim.launch.py  stage123.launch.py  stage123_control.launch.py
src/sim_models/models/asphalt_plane/: model.sdf
src/sim_models/models/delivery_package/: model.config  model.sdf
src/sim_models/models/depth_cam/: model.config  model.sdf
src/sim_models/models/iris_ardupilot_depth_cam/: model.config  model.sdf
src/sim_models/models/iris_with_depth_cam/: model.config  model.sdf
src/sim_models/rviz/: depth_cam_config.rviz  drone_outdoor.rviz
src/sim_models/worlds/: ardupilot_world.sdf  delivery_world.sdf  main_world.sdf  outdoor_world.sdf  outdoor_world_ardupilot.sdf  rescue_world.sdf
(+68 files in other folders)
