<?xml version="1.0"?>
<package format="3">
  <name>sim_models</name>
  <version>0.1.0</version>
  <description>Gazebo models and worlds for BoilerHawk simulation</description>
  <maintainer email="aabugendia@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
